# Linear-Code-LP

./: .gitignore  .gitmodules  G1  G2  README.md  X_G_generator.py  X_vectors_G1  X_vectors_G2  calc_mheight_params.py  m-height_solve-x.cc  m-height_solve-x.py  opt_mheight.py  paper_result.py
cpp_baseline/: CMakeLists.txt  calc_mheight.cc  calc_mheight.hh  main.cc  opt_mheight.cc  opt_mheight.hh  test.cc  test_eigen.cc  test_glpk.cc
cuda_baseline/: setup.sh
py_baseline/: calc_mheight.py  opt_mheight.py  test.py
py_ml_baseline/: dense_nn.py  pyepo_sample.py
